Fixed broken layout on the art page on desktop viewport

--- a/src/Views/ArtPage/ArtPage.scss
+++ b/src/Views/ArtPage/ArtPage.scss
@@ -1,64 +1,64 @@
-.art-container {
-  padding: 10.4rem 3.3rem;
+.artPage {
+  padding: 10.4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
 
-.art-container h4:not(.contact-form .section-title) {
-  color: var(--bg-lightest);
-  font-size: 2.8rem;
-  line-height: 5.5rem;
-  margin: 20.8rem 0 3.2rem 0;
-  text-transform: uppercase;
-}
+  h4:not(.contact-form .section-title) {
+    color: var(--bg-lightest);
+    font-size: 2.8rem;
+    line-height: 5.5rem;
+    margin: 20.8rem 0 3.2rem 0;
+    text-transform: uppercase;
+  }
 
-.art-container .headline {
-  font-size: 4.8rem;
-  line-height: 6rem;
-  margin-bottom: 1.6rem;
-}
+  .headline {
+    font-size: 4.8rem;
+    line-height: 6rem;
+    margin-bottom: 1.6rem;
+  }
 
-.art-container h3 {
-  font-size: 3.3rem;
-  margin-bottom: 10.4rem;
-  text-transform: none;
-  font-weight: 400;
-}
+  h3 {
+    font-size: 3.3rem;
+    margin-bottom: 10.4rem;
+    text-transform: none;
+    font-weight: 400;
+  }
 
-.art-container h4,
-.art-container .headline {
-  font-weight: 700;
-}
+  h4,
+  .headline {
+    font-weight: 700;
+  }
 
-.art-container .headline,
-.art-container h3 {
-  color: var(--white);
-}
+  .headline,
+  h3 {
+    color: var(--white);
+  }
 
-.art-container h4,
-.art-container h3,
-.art-container .headline {
-  text-align: left;
-}
+  h4,
+  h3,
+  .headline {
+    text-align: left;
+  }
 
-.art-container .art-gallery {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 8rem;
-  margin-bottom: 24.7rem;
-}
+  .art-gallery {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 8rem;
+    margin-bottom: 24.7rem;
+  }
 
-.art-container .art-pic {
-  border: 2px solid var(--cyan);
-  width: 55rem;
-  height: 60rem;
+  .art-pic {
+    border: 2px solid var(--cyan);
+    width: 55rem;
+    height: 60rem;
+  }
 }
 
 /* Media Queries */
 
 @media only screen and (max-width: 450px) {
-  .art-container .art-pic {
+  .artPage .art-pic {
     width: 48rem;
     height: 54rem;
   }
